<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".trip.TripActionActivity">

    <TextView
        android:id="@+id/trip_action_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/Title"
        android:text="@string/trip"
        app:layout_constraintTop_toTopOf="parent">
    </TextView>

    <Button
        android:id="@+id/trip_action_button_modify"
        style="@style/Button"
        android:text="@string/modify"
        app:layout_constraintTop_toBottomOf="@id/trip_action_title"
        app:layout_constraintBottom_toTopOf="@id/trip_action_button_change"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"/>

    <Button
        android:id="@+id/trip_action_button_change"
        style="@style/Button"
        android:text="@string/select"
        app:layout_constraintTop_toBottomOf="@id/trip_action_button_modify"
        app:layout_constraintBottom_toTopOf="@id/trip_action_button_add"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"/>

    <Button
        android:id="@+id/trip_action_button_add"
        style="@style/Button"
        android:text="@string/add"
        app:layout_constraintTop_toBottomOf="@id/trip_action_button_change"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>