<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".trip.TripModifyActivity">

    <TextView
        android:id="@+id/trip_modify_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/Title"
        android:text="@string/trip"
        app:layout_constraintTop_toTopOf="parent"/>

    <ImageView
        android:id="@+id/trip_modify_icon"
        style="@style/IconBig"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/trip_modify_title"></ImageView>

    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/trip_modify_linear0"
        style="@style/LinearVerticalLayout"
        app:layout_constraintTop_toBottomOf="@id/trip_modify_icon"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent">

    <TextView
        style="@style/SimpleText"
        android:text="@string/name"
        />

    <EditText
        android:id="@+id/trip_modify_editText0"
        style="@style/EditText"
        android:text=""
        />

    </androidx.appcompat.widget.LinearLayoutCompat>

    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/trip_modify_linear1"
        style="@style/LinearVerticalLayout"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/trip_modify_linear0">

        <TextView
            style="@style/SimpleText"
            android:text="@string/budget"
            />

        <EditText
            android:id="@+id/trip_modify_editText1"
            style="@style/EditText"
            android:inputType="number"
            android:text="0"
            />

    </androidx.appcompat.widget.LinearLayoutCompat>

    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/trip_modify_linear2"
        style="@style/LinearVerticalLayout"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/trip_modify_linear1">

        <TextView
            style="@style/SimpleText"
            android:text="@string/duration" />

        <EditText
            android:id="@+id/trip_modify_editText2"
            style="@style/EditText"
            android:inputType="number"
            android:text="0"
            />
    </androidx.appcompat.widget.LinearLayoutCompat>

    <Button
        android:id="@+id/trip_modify_button"
        style="@style/Button"
        android:text="@string/modify"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>