<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".trip.CostActivity">

    <TextView
        android:id="@+id/cost_modify_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/Title"
        android:text="@string/cost"
        app:layout_constraintTop_toTopOf="parent"/>

    <TextView
        android:id="@+id/cost_modify_text0"
        android:layout_width="0dp"
        app:layout_constraintWidth_percent="0.4"
        android:layout_height="wrap_content"
        android:text="@string/name"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@id/cost_modify_editText0"
        app:layout_constraintTop_toBottomOf="@id/cost_modify_title"
        app:layout_constraintBottom_toTopOf="@id/cost_modify_text1"
        />

    <EditText
        android:id="@+id/cost_modify_editText0"
        style="@style/EditText"
        android:text=""
        app:layout_constraintBottom_toBottomOf="@id/cost_modify_text0"
        app:layout_constraintLeft_toRightOf="@id/cost_modify_text0"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@id/cost_modify_text0"
        />

    <TextView
        android:id="@+id/cost_modify_text1"
        android:layout_width="0dp"
        app:layout_constraintWidth_percent="0.4"
        android:layout_height="wrap_content"
        android:text="@string/price"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@id/cost_modify_editText1"
        app:layout_constraintTop_toBottomOf="@id/cost_modify_text0"
        app:layout_constraintBottom_toTopOf="@id/cost_modify_text2"/>

    <EditText
        android:id="@+id/cost_modify_editText1"
        style="@style/EditText"
        android:inputType="number"
        android:text="0"
        app:layout_constraintBottom_toBottomOf="@id/cost_modify_text1"
        app:layout_constraintLeft_toRightOf="@id/cost_modify_text1"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@id/cost_modify_text1"
        />

    <TextView
        android:id="@+id/cost_modify_text2"
        android:layout_width="0dp"
        app:layout_constraintWidth_percent="0.4"
        android:layout_height="wrap_content"
        android:text="@string/trip"
        app:layout_constraintTop_toBottomOf="@+id/cost_modify_text1"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@id/cost_modify_editText2"
        app:layout_constraintBottom_toTopOf="@id/cost_modify_text3"
        />

    <EditText
        android:id="@+id/cost_modify_editText2"
        style="@style/EditText"
        android:text="0"
        android:inputType="number"
        app:layout_constraintBottom_toBottomOf="@id/cost_modify_text2"
        app:layout_constraintLeft_toRightOf="@id/cost_modify_text2"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@id/cost_modify_text2"
        />

    <TextView
        android:id="@+id/cost_modify_text3"
        android:layout_width="0dp"
        app:layout_constraintWidth_percent="0.4"
        android:layout_height="wrap_content"
        android:text="@string/category"
        app:layout_constraintTop_toBottomOf="@+id/cost_modify_text2"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@id/cost_modify_spinner"
        app:layout_constraintBottom_toTopOf="@id/cost_modify_date_picker"
        />

    <Spinner
        android:id="@+id/cost_modify_spinner"
        style="@style/EditText"
        app:layout_constraintBottom_toBottomOf="@id/cost_modify_text3"
        app:layout_constraintLeft_toRightOf="@id/cost_modify_text3"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@id/cost_modify_text3"
        />

    <DatePicker
        android:id="@+id/cost_modify_date_picker"
        android:datePickerMode="spinner"
        android:calendarViewShown="false"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/cost_modify_text3"
        app:layout_constraintBottom_toTopOf="@id/cost_modify_button_add"
        ></DatePicker>

    <Button
        android:id="@+id/cost_modify_button_add"
        style="@style/Button"
        android:text="@string/modify"
        app:layout_constraintTop_toBottomOf="@id/cost_modify_date_picker"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>